# Automake input for bundled.
#
# Copyright (c) 2021 The strace developers.
# All rights reserved.
#
# SPDX-License-Identifier: LGPL-2.1-or-later

EXTRA_DIST = \
	linux/COPYING \
	linux/GPL-2.0 \
	linux/Linux-syscall-note \
	linux/include/uapi/linux/btrfs.h \
	linux/include/uapi/linux/btrfs_tree.h \
	linux/include/uapi/linux/close_range.h \
	linux/include/uapi/linux/const.h \
	linux/include/uapi/linux/cryptouser.h \
	linux/include/uapi/linux/fiemap.h \
	linux/include/uapi/linux/fs.h \
	linux/include/uapi/linux/fscrypt.h \
	linux/include/uapi/linux/gpio.h \
	linux/include/uapi/linux/if_addr.h \
	linux/include/uapi/linux/inet_diag.h \
	linux/include/uapi/linux/input-event-codes.h \
	linux/include/uapi/linux/input.h \
	linux/include/uapi/linux/io_uring.h \
	linux/include/uapi/linux/loop.h \
	linux/include/uapi/linux/mount.h \
	linux/include/uapi/linux/netlink.h \
	linux/include/uapi/linux/netlink_diag.h \
	linux/include/uapi/linux/openat2.h \
	linux/include/uapi/linux/packet_diag.h \
	linux/include/uapi/linux/smc_diag.h \
	linux/include/uapi/linux/sock_diag.h \
	linux/include/uapi/linux/socket.h \
	linux/include/uapi/linux/tee.h \
	linux/include/uapi/linux/types.h \
	linux/include/uapi/linux/unix_diag.h \
	linux/include/uapi/linux/v4l2-common.h \
	linux/include/uapi/linux/v4l2-controls.h \
	linux/include/uapi/linux/videodev2.h \
	linux/include/uapi/rdma/ib_user_verbs.h \
	# end of EXTRA_DIST
