# Automake input for bundled.
#
# Copyright (c) 2021-2022 The strace developers.
# All rights reserved.
#
# SPDX-License-Identifier: LGPL-2.1-or-later

EXTRA_DIST = \
	linux/COPYING \
	linux/GPL-2.0 \
	linux/Linux-syscall-note \
	linux/arch/alpha/include/uapi/asm/fcntl.h \
	linux/arch/arm/include/uapi/asm/fcntl.h \
	linux/arch/arm64/include/uapi/asm/fcntl.h \
	linux/arch/ia64/include/uapi/asm/fcntl.h \
	linux/arch/m68k/include/uapi/asm/fcntl.h \
	linux/arch/mips/include/uapi/asm/fcntl.h \
	linux/arch/parisc/include/uapi/asm/fcntl.h \
	linux/arch/powerpc/include/uapi/asm/fcntl.h \
	linux/arch/sparc/include/uapi/asm/fcntl.h \
	linux/include/uapi/asm-generic/fcntl.h \
	linux/include/uapi/asm-generic/hugetlb_encode.h \
	linux/include/uapi/linux/blkpg.h \
	linux/include/uapi/linux/blktrace_api.h \
	linux/include/uapi/linux/blkzoned.h \
	linux/include/uapi/linux/bsg.h \
	linux/include/uapi/linux/btrfs.h \
	linux/include/uapi/linux/btrfs_tree.h \
	linux/include/uapi/linux/close_range.h \
	linux/include/uapi/linux/const.h \
	linux/include/uapi/linux/counter.h \
	linux/include/uapi/linux/cryptouser.h \
	linux/include/uapi/linux/dcbnl.h \
	linux/include/uapi/linux/dm-ioctl.h \
	linux/include/uapi/linux/dqblk_xfs.h \
	linux/include/uapi/linux/falloc.h \
	linux/include/uapi/linux/fcntl.h \
	linux/include/uapi/linux/fib_rules.h \
	linux/include/uapi/linux/fiemap.h \
	linux/include/uapi/linux/fs.h \
	linux/include/uapi/linux/fscrypt.h \
	linux/include/uapi/linux/futex.h \
	linux/include/uapi/linux/gen_stats.h \
	linux/include/uapi/linux/gpio.h \
	linux/include/uapi/linux/hiddev.h \
	linux/include/uapi/linux/if_addr.h \
	linux/include/uapi/linux/if_addrlabel.h \
	linux/include/uapi/linux/if_alg.h \
	linux/include/uapi/linux/if_bonding.h \
	linux/include/uapi/linux/if_bridge.h \
	linux/include/uapi/linux/if_link.h \
	linux/include/uapi/linux/if_xdp.h \
	linux/include/uapi/linux/in.h \
	linux/include/uapi/linux/in6.h \
	linux/include/uapi/linux/inet_diag.h \
	linux/include/uapi/linux/input-event-codes.h \
	linux/include/uapi/linux/input.h \
	linux/include/uapi/linux/io_uring.h \
	linux/include/uapi/linux/ip_vs.h \
	linux/include/uapi/linux/kcmp.h \
	linux/include/uapi/linux/kexec.h \
	linux/include/uapi/linux/keyctl.h \
	linux/include/uapi/linux/landlock.h \
	linux/include/uapi/linux/libc-compat.h \
	linux/include/uapi/linux/lirc.h \
	linux/include/uapi/linux/loop.h \
	linux/include/uapi/linux/mctp.h \
	linux/include/uapi/linux/memfd.h \
	linux/include/uapi/linux/mmtimer.h \
	linux/include/uapi/linux/mount.h \
	linux/include/uapi/linux/mpls.h \
	linux/include/uapi/linux/mptcp.h \
	linux/include/uapi/linux/mqueue.h \
	linux/include/uapi/linux/mroute.h \
	linux/include/uapi/linux/mroute6.h \
	linux/include/uapi/linux/neighbour.h \
	linux/include/uapi/linux/netconf.h \
	linux/include/uapi/linux/netfilter/ipset/ip_set.h \
	linux/include/uapi/linux/netfilter/nf_tables.h \
	linux/include/uapi/linux/netfilter/nf_tables_compat.h \
	linux/include/uapi/linux/netfilter/nfnetlink.h \
	linux/include/uapi/linux/netfilter/nfnetlink_acct.h \
	linux/include/uapi/linux/netfilter/nfnetlink_compat.h \
	linux/include/uapi/linux/netfilter/nfnetlink_conntrack.h \
	linux/include/uapi/linux/netfilter/nfnetlink_cthelper.h \
	linux/include/uapi/linux/netfilter/nfnetlink_cttimeout.h \
	linux/include/uapi/linux/netfilter/nfnetlink_hook.h \
	linux/include/uapi/linux/netfilter/nfnetlink_log.h \
	linux/include/uapi/linux/netfilter/nfnetlink_osf.h \
	linux/include/uapi/linux/netfilter/nfnetlink_queue.h \
	linux/include/uapi/linux/netlink.h \
	linux/include/uapi/linux/netlink_diag.h \
	linux/include/uapi/linux/nexthop.h \
	linux/include/uapi/linux/nfc.h \
	linux/include/uapi/linux/nsfs.h \
	linux/include/uapi/linux/openat2.h \
	linux/include/uapi/linux/packet_diag.h \
	linux/include/uapi/linux/perf_event.h \
	linux/include/uapi/linux/pkt_sched.h \
	linux/include/uapi/linux/prctl.h \
	linux/include/uapi/linux/ptp_clock.h \
	linux/include/uapi/linux/qrtr.h \
	linux/include/uapi/linux/quota.h \
	linux/include/uapi/linux/rtnetlink.h \
	linux/include/uapi/linux/sched.h \
	linux/include/uapi/linux/seccomp.h \
	linux/include/uapi/linux/securebits.h \
	linux/include/uapi/linux/smc_diag.h \
	linux/include/uapi/linux/sock_diag.h \
	linux/include/uapi/linux/socket.h \
	linux/include/uapi/linux/stat.h \
	linux/include/uapi/linux/tcp.h \
	linux/include/uapi/linux/tee.h \
	linux/include/uapi/linux/tls.h \
	linux/include/uapi/linux/types.h \
	linux/include/uapi/linux/unix_diag.h \
	linux/include/uapi/linux/userfaultfd.h \
	linux/include/uapi/linux/utsname.h \
	linux/include/uapi/linux/v4l2-common.h \
	linux/include/uapi/linux/v4l2-controls.h \
	linux/include/uapi/linux/version.h \
	linux/include/uapi/linux/videodev2.h \
	linux/include/uapi/linux/vm_sockets.h \
	linux/include/uapi/mtd/mtd-abi.h \
	linux/include/uapi/mtd/ubi-user.h \
	linux/include/uapi/rdma/ib_user_verbs.h \
	# end of EXTRA_DIST

dist-hook:
	$(LN_S) asm-generic $(distdir)/linux/include/uapi/asm
